dropdown content alignment fixed

--- a/src/assets/css/_common.scss
+++ b/src/assets/css/_common.scss
@@ -525,7 +525,7 @@ select {
 
 .dropdown-select-input {
   .checkbox-list {
-    overflow-x: scroll;
+    overflow-x: auto;
     max-height: 500px;
     li {
       width: 100%;
