--- a/src/assets/css/networth/networth.scss
+++ b/src/assets/css/networth/networth.scss
@@ -2241,6 +2241,7 @@ footer p {
 .mm-dropdown-menu {
   @extend .dropdown-menu;
   background-color: $darkBg !important;
+  width: 100%;
 }
 
 /****************************/
